# Dermify-Skin-disease-detection

./: LICENSE  README.md  app.py  auth.py  database.py  doctor_management.py  feedback_management.py  image_processing.py  model_utils.py  pyproject.toml  replit.md  requirements.txt  skin_disease_db.sqlite  skin_disease_model.py  user_dashboard.py  user_management.py
pages/: user_dashboard.py
